@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 5.2.10
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed button and textfields showing nothing if request is 0 and trash is unlimited
 ---------------------------------------------------------------------------------------------------
 Version: 5.2.9
 Date: 2020-10-31
